Fix tooltips in dark mode

--- a/src/components/screens/wallet/overview/accountInfo/accountInfo.css
+++ b/src/components/screens/wallet/overview/accountInfo/accountInfo.css
@@ -76,11 +76,13 @@
       }
     }
 
-    & .copyIcon,
-    & .qrCode,
-    & .bookmark,
-    & .verify {
-      filter: brightness(100);
+    & img {
+      &.copyIcon,
+      &.qrCode,
+      &.bookmark,
+      &.verify {
+        filter: brightness(100) !important;
+      }
     }
 
     & .copyIcon {
